[gd_scene load_steps=15 format=2]

[ext_resource path="res://Assets/Efects/Shield/shield-6.png" type="Texture" id=1]
[ext_resource path="res://Assets/Efects/Shield/shield-2.png" type="Texture" id=2]
[ext_resource path="res://Assets/Efects/Shield/shield-4.png" type="Texture" id=3]
[ext_resource path="res://Assets/Efects/Shield/shield-3.png" type="Texture" id=4]
[ext_resource path="res://Assets/Efects/Shield/shield-5.png" type="Texture" id=5]
[ext_resource path="res://scripts/Effects/Explosion.gd" type="Script" id=6]
[ext_resource path="res://Assets/Music/Explosions/Explosion2.wav" type="AudioStream" id=7]
[ext_resource path="res://Assets/Music/Explosions/Explosion7.wav" type="AudioStream" id=8]
[ext_resource path="res://Assets/Music/Explosions/Explosion3.wav" type="AudioStream" id=9]
[ext_resource path="res://Assets/Music/Explosions/Explosion8.wav" type="AudioStream" id=10]
[ext_resource path="res://Assets/Music/Explosions/Explosion4.wav" type="AudioStream" id=11]
[ext_resource path="res://Assets/Music/Explosions/Explosion5.wav" type="AudioStream" id=12]
[ext_resource path="res://Assets/Efects/Shield/shield-1.png" type="Texture" id=13]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 13 ), ExtResource( 2 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 5 ), ExtResource( 1 ) ],
"loop": true,
"name": "boom",
"speed": 20.0
} ]

[node name="Explosion" type="Node2D"]
scale = Vector2( 3, 3 )
script = ExtResource( 6 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
animation = "boom"

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Explosion7" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -30.0

[node name="Explosion8" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -30.0

[node name="Explosion3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = -30.0

[node name="Explosion4" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -30.0

[node name="Explosion2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -30.0

[node name="Explosion1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -30.0

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
